fix: hide scrollbar style

--- a/src/index.css
+++ b/src/index.css
@@ -8,12 +8,12 @@ body {
 @custom-variant dark (&:where(.dark, .dark *));
 
 /* width */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 8px;
-}
+} */
 
 /* Handle */
-::-webkit-scrollbar-thumb {
+/* ::-webkit-scrollbar-thumb {
   background: #c5c5c5;
   border-radius: 16px;
-}
+} */
